# freeasterix-py

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  test.py
examples/: simple.py
freeasterix/: __init__.py
src/: lib.rs
