[package]
name = "freeasterix-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["dylib"]

[dependencies]
pyo3 = "0.18.1"
pythonize = "0.18.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
obj2asterix = { path = "../freeasterix/crates/obj2asterix" }
spec_parser = { path = "../freeasterix/crates/spec_parser" }
once_cell = "1.17.1"
