[package]
name = "freeasterix-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "freeasterix"
crate_type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features=["extension-module"]}
pythonize = "0.18.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
spec_parser = { git = "ssh://git@github.com:/freeasterix/freeasterix.git" }
obj2asterix = { git = "ssh://git@github.com:/freeasterix/freeasterix.git" }
